# xine-ui

./: .cvsignore  .cvsversion  .hgignore  .hgsigs  ABOUT-NLS  AUTHORS  ChangeLog  Makefile.am  README  acconfig.h  autogen.sh  configure.ac  configure.in  cvscompile.sh
debian/: README.Debian  changelog  control  copyright  links  menu  rules  shlibdeps.sh  watch  xine-ui.mime  xine-ui.postinst.in  xine-ui.postrm  xine-ui.triggers  xine.docs
doc/: FAQ  FAQ.in  FAQ_de  FAQ_en  FAQ_es  FAQ_es.in  FAQ_pl  FAQ_uk  Makefile.am  README  README.config_en  README.corba  README.cs.0.Introduction  README.cs.10.Remote_control  README.cs.15.MRLs  README.cs.5.xine-ui  README.divx4  README.dxr3  README.dxr3_pl  README.en.0.Introduction  README.en.10.Remote_control  README.en.15.MRLs  README.en.20.DVD  README.en.25.VideoCD  README.en.30.Advanced  README.en.32.Window_managers  README.en.35.Legal_issues  README.en.5.xine-ui  README.freebsd  README.irix  README.mrl  README.opengl  README.solaris  README.syncfb  README.tvmode  README.xinerc  README_cs  README_de  README_en  README_es  (+6 more)
doc/man/: Makefile.am
doc/man/de/: .cvsignore  Makefile.am  aaxine.1.in  xine-check.1.in  xine-remote.1  xine.1.in
doc/man/en/: Makefile.am  aaxine.1.in  xine-check.1.in  xine-remote.1  xine.1.in
doc/man/es/: Makefile.am  aaxine.1.in  xine-check.1.in  xine-remote.1  xine.1.in
doc/man/fr/: .cvsignore  Makefile.am  xine.1.in
doc/man/pl/: .cvsignore  Makefile.am  aaxine.1.in  xine-remote.1  xine.1.in
intl/: Makefile.in  dcigettext.c
libcurl/: Makefile.am  getdate.c
libcurl/include/: Makefile.am
libcurl/include/curl/: Makefile.am
m4/: Makefile  Makefile.am  Makefile.in  ORBit.m4  _xine.m4  aa.m4  caca.m4  curl.m4  dl.m4  nls.m4  readline.m4  xft.m4
misc/: .cvsignore  Makefile.am  README.splash  SlackBuild.in  autogen.sh  build-xine-check.pl  build_rpms.sh.in  relchk.sh.in  xine-check  xine-check.en  xine-check.sh.in  xine-ui.spec.in  xine-ui.xml  xine_bash_completion  xine_splash.xcf  xineshot
misc/desktops/: Makefile.am  mime.default  mime.extra  xine.desktop  xine.desktop.in  xine.wmconfig  xine.xpm  xine_32.xpm
misc/desktops/icons/scalable/: xine.svgz
misc/splash-default/: xine-ui_logo.mpg  xine_splash.xcf
misc/visuals/: Makefile.am  default.avi
po/: .cvsignore  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  cs.po  de.po  eo.po  es.po  eu.po  fr.po  it.po  ja.po  nb.po  pl.po  pl_PL.po  pt_BR.po  ru.po  sk.po  uk.po  xine-ui.pot
readline/: .cvsignore  Makefile.am  bind.c  complete.c  histexpand.c  input.c  rldefs.h  tilde.c
src/: Makefile.am
src/Imlib-light/: Imlib.h  Imlib_private.h  Imlib_types.h  Makefile.am  cache.c  colors.c  load.c  misc.c  rend.c  utils.c
src/aaui/: .cvsignore  Makefile.am  main.c
src/common/: Makefile.am  Makefile.common  config_wrapper.c  config_wrapper.h  dump.c  dump.h  dump_x11.h  getline.c  getopt.c  getopt.h  getopt1.c  getsubopt.c  globals.c  globals.h  libcommon.h  monitor.c  monitor.h  strlcat.c  strlcpy.c  strndup.c  strsep.c  utils.c  utils.h  x11utils.c  xine_compat.h  xine_open_cloexec.c  xine_socket_cloexec.c  xscreensaver-remote.c  xscreensaver-remote.h
src/corba/: .cvsignore  Makefile.am  corba-utils.c  corba-utils.h  example.py  xine-impl.c  xine-remote.c  xine-server.c  xine-server.h  xine.idl
src/dfb/: .cvsignore  Makefile.am  dfb.c  dfb.h  main.c  options.c  utils.c
src/fb/: .cvsignore  Makefile.am  actions.c  actions.h  callback.c  callback.h  config_wrapper.c  config_wrapper.h  keys.c  keys.h  lirc.c  lirc.h  main.c  main.h  options.c  options.h  osd.c  osd.h  post.c  post.h  stdctl.c  stdctl.h
src/xitk/: .cvsignore  Makefile.am  acontrol.c  acontrol.h  actions.c  actions.h  common.h  config_wrapper.c  config_wrapper.h  control.c  control.h  ctrl_test.c  ctrlsock.c  ctrlsock.h  download.c  download.h  errors.c  errors.h  event.c  event.h  event_sender.c  event_sender.h  file_browser.c  file_browser.h  frequencies.c  frequencies.h  gui_actions.c  gui_actions.h  gui_browser.c  gui_browser.h  gui_button.c  gui_button.h  gui_checkbox.c  gui_checkbox.h  gui_control.c  gui_dnd.c  gui_dnd.h  gui_image.c  gui_image.h  gui_label.c  (+79 more)
src/xitk/Imlib-light/: Imlib.h  Imlib_decode.h  Imlib_private.h  Imlib_types.h  Makefile.am  cache.c  colors.c  decode.c  load.c  misc.c  rend.c  snprintf.c  utils.c
src/xitk/oxine/: Makefile.am  list.c  list.h  mediamarks.c  mediamarks.h  odk.c  odk.h  otk.c  otk.h  oxine.c  oxine.h  oxine_event.h  playlist.c  playlist.h  utils.c  utils.h
src/xitk/oxine/data/: Makefile.am  mainmenu  mediamarks
src/xitk/skins/: Makefile.am
src/xitk/skins/CelomaChrome/: Makefile.am  skinconfig
src/xitk/skins/CelomaGold/: Makefile.am  skinconfig
src/xitk/skins/CelomaMdk/: Makefile.am  skinconfig
src/xitk/skins/cloudy/: Makefile.am  fonts.dir  skinconfig
src/xitk/skins/default/: Makefile.am  skinconfig
src/xitk/skins/lcd/: Makefile.am  skinconfig
src/xitk/skins/metal/: Makefile.am  skinconfig
src/xitk/skins/mp2k/: Makefile.am  skinconfig
src/xitk/skins/pitt/: Makefile.am  skinconfig
src/xitk/skins/xinetic/: Makefile.am  skinconfig
src/xitk/xine-toolkit/: Makefile.am  README  _backend.h  _config.h  _xitk.h  backend.h  backend_x11.c  browser.c  browser.h  button.c  button.h  button_list.c  button_list.h  checkbox.c  checkbox.h  combo.c  combo.h  config.c  cursors.c  cursors.h  cursors_x11.c  cursors_x11.h  default_font.h  dialog.c  dlist.h  dnd.c  dnd.h  dnd_x11.c  doublebox.c  doublebox.h  filebrowser.c  filebrowser.h  font.c  font.h  font_ft.c  font_ft.h  font_x11.c  font_x11.h  getdeskroot.c  gui_browser.c  (+56 more)
src/xitk/xine-toolkit/po/: .cvsignore  LINGUAS  Makefile  Makefile.in  Makefile.in.in  Makevars  POTFILES  POTFILES.in  cs.po  de.po  es.po  eu.po  fr.po  it.po  ja.po  nb.po  pl.po  pl_PL.po  pt_BR.po  ru.po  sk.po  uk.po  xitk.pot
